[gd_scene load_steps=2 format=3 uid="uid://d212khl5rh6m4"]

[ext_resource type="Script" path="res://scripts/ui/windows/edit_window.gd" id="1_647kw"]

[node name="Window" type="Window"]
title = "Editing Pomodoro"
initial_position = 1
size = Vector2i(400, 623)
exclusive = true
popup_window = true

[node name="Margin" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(390, 600)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -195.0
offset_top = 5.0
offset_right = 195.0
offset_bottom = 605.0
grow_horizontal = 2

[node name="VBox_Editor" type="VBoxContainer" parent="Margin"]
layout_mode = 2
alignment = 1
script = ExtResource("1_647kw")

[node name="Grid_Number" type="GridContainer" parent="Margin/VBox_Editor"]
layout_mode = 2
columns = 2

[node name="Label_Title" type="Label" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Title"

[node name="TextEdit_Title" type="TextEdit" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = " Pomodoro 
"

[node name="Label_Rest" type="Label" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Rest
"

[node name="SpinBox_Rest" type="SpinBox" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
value = 5.0
rounded = true
alignment = 1
update_on_text_changed = true
suffix = " Minutes"

[node name="Label_Long" type="Label" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Break"

[node name="SpinBox_Long" type="SpinBox" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
value = 15.0
alignment = 1
update_on_text_changed = true
suffix = "Minutes"

[node name="Label_Count" type="Label" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
tooltip_text = "When Count is set to 0 pomos, Rest and breaks will be disabled."
mouse_filter = 1
text = "Count (?)"

[node name="SpinBox_Pomo" type="SpinBox" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
value = 4.0
alignment = 1
update_on_text_changed = true
suffix = "Pomodoros"

[node name="Label_Work" type="Label" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Work"

[node name="SpinBox_Work" type="SpinBox" parent="Margin/VBox_Editor/Grid_Number"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
min_value = 1.0
max_value = 90.0
value = 25.0
rounded = true
alignment = 1
update_on_text_changed = true
suffix = " Minutes"

[node name="Grid_Check" type="GridContainer" parent="Margin/VBox_Editor"]
layout_mode = 2
columns = 2

[node name="Label_AutoRest" type="Label" parent="Margin/VBox_Editor/Grid_Check"]
layout_mode = 2
text = "Auto-start rest time"

[node name="Check_AutoRest" type="CheckButton" parent="Margin/VBox_Editor/Grid_Check"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = " "
icon_alignment = 1

[node name="Label_Dynamic" type="Label" parent="Margin/VBox_Editor/Grid_Check"]
layout_mode = 2
tooltip_text = "Rest time is accumulated during Work time"
mouse_filter = 1
text = "Dynamic Break Bank (?)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Check_Dynamic" type="CheckButton" parent="Margin/VBox_Editor/Grid_Check"]
custom_minimum_size = Vector2(0, 40)
layout_direction = 2
layout_mode = 2

[node name="Label_AutoWork" type="Label" parent="Margin/VBox_Editor/Grid_Check"]
layout_mode = 2
text = "Auto-start work time"

[node name="Check_AutoWork" type="CheckButton" parent="Margin/VBox_Editor/Grid_Check"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = " "
icon_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Margin/VBox_Editor"]
layout_mode = 2

[node name="Label" type="Label" parent="Margin/VBox_Editor"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Review Details"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBox_Pomo" type="VBoxContainer" parent="Margin/VBox_Editor"]
layout_mode = 2

[node name="HBox_Title" type="HBoxContainer" parent="Margin/VBox_Editor/VBox_Pomo"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Button_Title" type="Button" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox_Settings" type="HBoxContainer" parent="Margin/VBox_Editor/VBox_Pomo"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Button_Rest" type="Button" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Settings"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "AR"
flat = true

[node name="Button_Dynamic" type="Button" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Settings"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "D"
flat = true

[node name="Button_Work" type="Button" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Settings"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
text = "AW"
flat = true

[node name="HBox_Details" type="HBoxContainer" parent="Margin/VBox_Editor/VBox_Pomo"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label_Rest" type="Label" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Details"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator1" type="VSeparator" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Details"]
layout_mode = 2

[node name="Label_Long" type="Label" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Details"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Details"]
layout_mode = 2

[node name="Label_Pomo" type="Label" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Details"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Details"]
layout_mode = 2

[node name="Label_Work" type="Label" parent="Margin/VBox_Editor/VBox_Pomo/HBox_Details"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox_Actions" type="HBoxContainer" parent="Margin/VBox_Editor"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Button_Cancel" type="Button" parent="Margin/VBox_Editor/HBox_Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Button_Delete" type="Button" parent="Margin/VBox_Editor/HBox_Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Delete"

[node name="Button_Confirm" type="Button" parent="Margin/VBox_Editor/HBox_Actions"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm"

[connection signal="close_requested" from="." to="Margin/VBox_Editor" method="_on_window_close_requested"]
[connection signal="focus_exited" from="Margin/VBox_Editor/Grid_Number/TextEdit_Title" to="Margin/VBox_Editor" method="_on_text_edit_title_focus_exited"]
[connection signal="text_changed" from="Margin/VBox_Editor/Grid_Number/TextEdit_Title" to="Margin/VBox_Editor" method="_on_text_edit_title_text_changed"]
[connection signal="value_changed" from="Margin/VBox_Editor/Grid_Number/SpinBox_Rest" to="Margin/VBox_Editor" method="_on_spin_box_rest_value_changed"]
[connection signal="value_changed" from="Margin/VBox_Editor/Grid_Number/SpinBox_Long" to="Margin/VBox_Editor" method="_on_spin_box_long_value_changed"]
[connection signal="value_changed" from="Margin/VBox_Editor/Grid_Number/SpinBox_Pomo" to="Margin/VBox_Editor" method="_on_spin_box_pomo_value_changed"]
[connection signal="value_changed" from="Margin/VBox_Editor/Grid_Number/SpinBox_Work" to="Margin/VBox_Editor" method="_on_spin_box_work_value_changed"]
[connection signal="toggled" from="Margin/VBox_Editor/Grid_Check/Check_AutoRest" to="Margin/VBox_Editor" method="_on_check_auto_rest_toggled"]
[connection signal="toggled" from="Margin/VBox_Editor/Grid_Check/Check_Dynamic" to="Margin/VBox_Editor" method="_on_check_dynamic_toggled"]
[connection signal="toggled" from="Margin/VBox_Editor/Grid_Check/Check_AutoWork" to="Margin/VBox_Editor" method="_on_check_auto_work_toggled"]
[connection signal="pressed" from="Margin/VBox_Editor/HBox_Actions/Button_Cancel" to="Margin/VBox_Editor" method="_on_button_cancel_pressed"]
[connection signal="pressed" from="Margin/VBox_Editor/HBox_Actions/Button_Delete" to="Margin/VBox_Editor" method="_on_button_delete_pressed"]
[connection signal="pressed" from="Margin/VBox_Editor/HBox_Actions/Button_Confirm" to="Margin/VBox_Editor" method="_on_button_confirm_pressed"]
